--- a/index.html
+++ b/index.html
@@ -10,20 +10,15 @@
     <script src="index.js"></script>
 </head>
 <body>
+        <div class="panel">
+            
+            <a href="test.zip" download target="_blank" class="download button1">
+                Download
+            </a>
+        </div>
+    <div class="midle">
         
-        <div class="visit1">
-            <a href="https://github.com/MaksimsVisockis01" target="_blank" class="github button1">GitHub</a> 
-            <h1>Mana visitkarte</h1>
-        </div>
-        <div class="visit2">
-            <h2>Par mani:</h2>
-                <a class="a1">Es esnu Maksims Visockis, esmu RVT tehnikuma DP3-1 grupas audzeknis</a><br>
-                <a class="a2">Man patīk:</a>
-                <ul class="par_mani">
-                    <li>Sports</li>
-                    <li>Programešana</li>
-                    <li>Dator spēlēs</li>
-                </ul>
-        </div>
+    </div>
+
 </body>
 </html>
