--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <img src="foto/backfoto.png" alt="" id="background">
-    
         <!-- <div class="panel">
             
             <a href="test.zip" download target="_blank" class="download button1">
@@ -25,7 +23,7 @@
 
     <div class="main-div">
         <h1 id="name" class="text">RVT ADVENTURES</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2-H7DVE8_PM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video"  src="https://www.youtube.com/embed/2-H7DVE8_PM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
