--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="main-div">
         <h1 id="name" class="text">RVT ADVENTURES</h1>
-        <iframe id="video"  src="https://www.youtube.com/embed/2-H7DVE8_PM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video"  src="https://www.youtube.com/embed/DKVfbqx7ct8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
