--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
                 <div class="row">
                     <h2>About</h2>
                     <p>euowfgnoweogowegioweiogw</p>
+                    <iframe src="https://giphy.com/embed/l3vRfNA1p0rvhMSvS" width="480" height="192" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    <p>euowfgnoweogowegioweiogw</p>
                 </div>
                 <div class="row">
                     <h2>About</h2>
+                    <p>euowfgnoweogowegioweiogw</p>
+                    <iframe src="https://giphy.com/embed/l3vRfNA1p0rvhMSvS" width="480" height="192" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                     <p>euowfgnoweogowegioweiogw</p>
                 </div>
             </div>
