--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
         <footer>
             <div class="download">
-            <a href="test.zip" download target="_blank" class="button button1">
+                <!-- download button -->
+            <a href="https://drive.google.com/u/0/uc?id=10TdE2V5KnpnjGa_VDw__s8g0WN33Xca2&export=download" download target="_blank" class="button button1">
                 Download
             </a>
             </div>
